--- a/PidaClumetic/app/src/main/res/layout/activity_j_group_product.xml
+++ b/PidaClumetic/app/src/main/res/layout/activity_j_group_product.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:id="@+id/parent">
 
     <ScrollView
         android:id="@+id/scrollView2"
@@ -96,7 +97,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:maxLines="1"
-                        android:text="현재 몇개 구매중"
+                        android:text="현재 --개 구매중"
                         android:textColor="#9000"
                         android:textSize="14sp"
                         android:textStyle="bold"
