PG payment added

--- a/PidaClumetic/app/src/main/res/layout/activity_m_tester.xml
+++ b/PidaClumetic/app/src/main/res/layout/activity_m_tester.xml
@@ -24,6 +24,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ScrollView
+        android:id="@+id/scrollView3"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="32dp"
@@ -137,88 +138,47 @@
 
             </android.support.constraint.ConstraintLayout>
 
-            <android.support.constraint.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:clipToPadding="false"
-                android:paddingBottom="20dp"
-                app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">
-
-
-                <Button
-                    android:id="@+id/payment"
-                    android:layout_width="match_parent"
-                    android:layout_height="48dp"
-                    android:layout_margin="4dp"
-                    android:layout_marginTop="12dp"
-                    android:background="@color/white"
-                    android:elevation="10dp"
-                    android:gravity="center_vertical"
-                    android:paddingStart="14dp"
-                    android:paddingLeft="14dp"
-                    android:text="결제정보"
-                    android:textColor="@color/drk_gray"
-                    android:textSize="16sp"
-                    app:fontFamily="@font/notosans"
-                    app:layout_constraintTop_toBottomOf="@+id/cream" />
-
-                <ImageView
-                    android:id="@+id/imageView4"
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
-                    android:layout_marginEnd="10dp"
-                    android:layout_marginRight="10dp"
-                    android:elevation="11dp"
-                    android:tint="@color/drk_gray"
-                    app:layout_constraintBottom_toBottomOf="@+id/payment"
-                    app:layout_constraintRight_toRightOf="@+id/payment"
-                    app:layout_constraintTop_toTopOf="@+id/payment"
-                    app:srcCompat="@drawable/ic_rightarrow"
-                    tools:ignore="VectorDrawableCompat" />
-
-                <Button
-                    android:id="@+id/delivery"
-                    android:layout_width="match_parent"
-                    android:layout_height="48dp"
-                    android:layout_margin="4dp"
-                    android:layout_marginTop="8dp"
-                    android:background="@color/white"
-                    android:elevation="10dp"
-                    android:gravity="center_vertical"
-                    android:paddingStart="14dp"
-                    android:paddingLeft="14dp"
-                    android:text="배송정보"
-                    android:textColor="@color/drk_gray"
-                    android:textSize="16sp"
-                    app:fontFamily="@font/notosans"
-                    app:layout_constraintTop_toBottomOf="@+id/payment" />
-
-                <ImageView
-                    android:id="@+id/imageView5"
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
-                    android:layout_marginEnd="10dp"
-                    android:layout_marginRight="10dp"
-                    android:elevation="11dp"
-                    android:tint="@color/drk_gray"
-                    app:layout_constraintBottom_toBottomOf="@+id/delivery"
-                    app:layout_constraintRight_toRightOf="@+id/delivery"
-                    app:layout_constraintTop_toTopOf="@+id/delivery"
-                    app:srcCompat="@drawable/ic_rightarrow"
-                    tools:ignore="VectorDrawableCompat" />
-
-
-            </android.support.constraint.ConstraintLayout>
         </LinearLayout>
     </ScrollView>
+
+    <Button
+        android:id="@+id/delivery"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:layout_margin="4dp"
+        android:layout_marginBottom="10dp"
+        android:background="@color/white"
+        android:elevation="10dp"
+        android:gravity="center_vertical"
+        android:paddingStart="14dp"
+        android:paddingLeft="14dp"
+        android:text="배송정보"
+        android:textColor="@color/drk_gray"
+        android:textSize="16sp"
+        app:fontFamily="@font/notosans"
+        app:layout_constraintBottom_toTopOf="@+id/tester"
+        tools:layout_editor_absoluteX="4dp" />
+
+    <ImageView
+        android:id="@+id/imageView5"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginRight="10dp"
+        android:elevation="11dp"
+        android:tint="@color/drk_gray"
+        app:layout_constraintBottom_toBottomOf="@+id/delivery"
+        app:layout_constraintRight_toRightOf="@+id/delivery"
+        app:layout_constraintTop_toTopOf="@+id/delivery"
+        app:srcCompat="@drawable/ic_rightarrow"
+        tools:ignore="VectorDrawableCompat" />
 
 
     <Button
         android:id="@+id/tester"
         android:layout_width="match_parent"
         android:layout_height="48dp"
-        android:text="받아보기"
+        android:text="배송비만 결제하고 받아보기"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
