--- a/PidaClumetic/app/src/main/res/layout/activity_j_group_product.xml
+++ b/PidaClumetic/app/src/main/res/layout/activity_j_group_product.xml
@@ -470,6 +470,150 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
+                android:paddingLeft="24dp"
+                android:paddingTop="10dp"
+                android:paddingRight="16dp"
+                android:paddingBottom="10dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/textView11"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="성분"
+                        android:textColor="#de000000"
+                        android:textSize="16sp"
+                        app:fontFamily="@font/notosans" />
+
+                </LinearLayout>
+
+                <ListView
+                    android:id="@+id/Ingredient"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="5dp" />
+
+
+            </LinearLayout>
+
+
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/lgt_gray"
+                android:id="@+id/deliveryRuleView"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/rules"
+                android:orientation="vertical"
+                android:paddingLeft="24dp"
+                android:paddingTop="10dp"
+                android:paddingRight="16dp"
+                android:paddingBottom="10dp">
+
+                <TextView
+                    android:id="@+id/rule1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="환불 규정"
+                    android:textColor="#de000000"
+                    android:textSize="16sp"
+                    app:fontFamily="@font/notosans" />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="5dp" />
+
+                <TextView
+                    android:id="@+id/rule11"
+                    android:layout_width="match_parent"
+                    android:layout_marginBottom="5dp"
+                    android:layout_height="wrap_content"
+                    android:text="상품 청약철회 가능기간은 상품 수령일로부터 7일 이내 입니다."
+                    android:textColor="#de000000"
+                    android:textSize="14sp" />
+                <TextView
+                    android:id="@+id/rule12"
+                    android:layout_width="match_parent"
+                    android:layout_marginBottom="5dp"
+                    android:layout_height="wrap_content"
+                    android:text="상품 개봉으로 상품 가치 훼손 시에는 7일 이내라도 교환 및 반품이 불가능합니다."
+                    android:textColor="#de000000"
+                    android:textSize="14sp" />
+                <TextView
+                    android:id="@+id/rule13"
+                    android:layout_width="match_parent"
+                    android:layout_marginBottom="5dp"
+                    android:layout_height="wrap_content"
+                    android:text="저단가 상품, 일부 특가 상품은 고객 변심에 의한 교환, 반품은 고객께서 배송비를 부담하셔야 합니다. (제품의 하자, 배송오류는 제외) 일부 상품은 제조사 사정으로 가격이 변동될 수 있습니다."
+                    android:textColor="#de000000"
+                    android:textSize="14sp" />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="5dp" />
+
+                <TextView
+                    android:id="@+id/rule2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="배송 규정"
+                    android:textColor="#de000000"
+                    android:textSize="16sp"
+                    app:fontFamily="@font/notosans" />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="5dp" />
+
+                <TextView
+                    android:id="@+id/rule21"
+                    android:layout_width="match_parent"
+                    android:layout_marginBottom="5dp"
+                    android:layout_height="wrap_content"
+                    android:text="기본배송료는 2,500원 입니다. 도서, 산간, 오지 일부지역은 배송비가 추가될 수 있습니다."
+                    android:textColor="#de000000"
+                    android:textSize="14sp" />
+                <TextView
+                    android:id="@+id/rule22"
+                    android:layout_width="match_parent"
+                    android:layout_marginBottom="5dp"
+                    android:layout_height="wrap_content"
+                    android:text="본 상품 평균 배송일은 3일입니다. 입금 확인 후 상품의 경우 다소 늦어질 수 있습니다. 배송예정일은 주문시점(주문순서)에 따른 유동성이 발생하므로 평균 배송일과는 차이가 발생할 수 있습니다."
+                    android:textColor="#de000000"
+                    android:textSize="14sp" />
+                <TextView
+                    android:id="@+id/rule23"
+                    android:layout_width="match_parent"
+                    android:layout_marginBottom="5dp"
+                    android:layout_height="wrap_content"
+                    android:text="본 상품의 배송 가능일은 월요일~금요일까지 입니다. 배송 가능일이란 본 상품을 주문하신 고객님들께 상품 배송이 가능한 기간을 의미합니다. (단, 연휴 및 공휴일은 기간 계산시 제외합니다.)"
+                    android:textColor="#de000000"
+                    android:textSize="14sp" />
+
+            </LinearLayout>
+
+
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/lgt_gray" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
                 android:paddingLeft="16dp"
                 android:paddingTop="10dp"
                 android:paddingRight="16dp"
