--- a/PidaClumetic/app/src/main/res/layout/activity_m_tester.xml
+++ b/PidaClumetic/app/src/main/res/layout/activity_m_tester.xml
@@ -60,7 +60,7 @@
                     android:textColor="@color/drk_gray"
                     android:textSize="16sp"
                     app:fontFamily="@font/notosans"
-                    app:layout_constraintTop_toBottomOf="@+id/cream" />
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <ImageView
                     android:id="@+id/imageView"
