--- a/PidaClumetic/app/src/main/res/layout/activity_r_purchase.xml
+++ b/PidaClumetic/app/src/main/res/layout/activity_r_purchase.xml
@@ -12,12 +12,16 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@+id/constraintLayout3"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        android:clipChildren="false"
+        android:clipToPadding="false">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:clipChildren="false"
+            android:clipToPadding="false">
 
 
             <View
@@ -38,6 +42,8 @@
                     android:layout_height="216dp"
                     android:layout_marginBottom="8dp"
                     android:layout_marginTop="20dp"
+                    android:clipChildren="false"
+                    android:clipToPadding="false"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent" />
 
@@ -206,7 +212,7 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="222dp"
                 android:orientation="vertical"
                 android:paddingLeft="16dp"
                 android:paddingTop="10dp"
