--- a/PidaClumetic/app/src/main/res/layout/activity_e_category.xml
+++ b/PidaClumetic/app/src/main/res/layout/activity_e_category.xml
@@ -25,16 +25,6 @@
             app:fontFamily="@font/notosans" />
 
         <ImageButton
-            android:id="@+id/btnCamera"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            android:background="#00000000"
-            android:paddingStart="0dp"
-            android:paddingEnd="20dp"
-            app:srcCompat="@android:drawable/ic_menu_camera" />
-
-        <ImageButton
             android:id="@+id/btnSearch"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -55,12 +45,12 @@
 
 
     <ScrollView
+        android:id="@+id/scrollView4"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
-        app:layout_constraintVertical_bias="0.0"
-        tools:layout_editor_absoluteX="0dp">
+        >
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -77,32 +67,23 @@
                 android:adjustViewBounds="true"
                 android:background="#00000000"
                 android:scaleType="centerInside"
-                app:srcCompat="@drawable/img_cream" />
-
-            <ImageButton
-                android:id="@+id/baby"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:adjustViewBounds="true"
-                android:background="#00000000"
-                android:scaleType="centerInside"
-                app:srcCompat="@drawable/img_baby" />
+                app:srcCompat="@drawable/img_total"
+                android:gravity="center"/>
 
 
             <LinearLayout
-                android:visibility="gone"
                 android:id="@+id/babypick"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="20dp"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
                 android:gravity="center_horizontal"
-                android:orientation="vertical"
-                android:layout_marginLeft="20dp">
+                android:orientation="vertical">
+
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:weightSum="4.5">
 
@@ -120,14 +101,14 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="3"
-                        android:text="베이비픽"
+                        android:text="클루메틱"
                         android:textColor="@color/drk_gray"
                         android:textSize="14sp" />
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:weightSum="4.5">
 
@@ -152,7 +133,32 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:weightSum="4.5">
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1.5"
+                        android:text="대표번호 :"
+                        android:textColor="@color/lgt_gray"
+                        android:textSize="14sp"
+                        android:textStyle="bold"
+                        app:fontFamily="@font/notosans" />
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="3"
+                        android:text="070-2129-7481"
+                        android:textColor="@color/drk_gray"
+                        android:textSize="14sp" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:weightSum="4.5">
 
@@ -177,7 +183,7 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:weightSum="4.5">
 
@@ -202,7 +208,7 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:weightSum="4.5">
 
@@ -227,7 +233,7 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:weightSum="4.5">
 
@@ -253,8 +259,10 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/linearLayout2"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="3dp"
                 android:gravity="center_horizontal"
                 android:orientation="horizontal">
 
@@ -264,17 +272,6 @@
                     android:layout_height="wrap_content"
                     android:text="이용약관 및 개인정보 취급 방침" />
 
-                <TextView
-                    android:id="@+id/textView7"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="  ||  " />
-
-                <TextView
-                    android:id="@+id/textView8"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="사업자 정보 확인" />
             </LinearLayout>
 
         </LinearLayout>
