--- a/PidaClumetic/app/src/main/res/layout/activity_q_purchase_finish.xml
+++ b/PidaClumetic/app/src/main/res/layout/activity_q_purchase_finish.xml
@@ -14,7 +14,9 @@
         app:layout_constraintBottom_toTopOf="@+id/goMypida"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        android:clipChildren="false"
+        android:clipToPadding="false">
 
         <ImageView
             android:id="@+id/imgURI"
