--- a/PidaClumetic/app/src/main/res/layout/activity_r_purchase.xml
+++ b/PidaClumetic/app/src/main/res/layout/activity_r_purchase.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:clipToPadding="false"
-    android:clipChildren="false">
+    android:clipChildren="false"
+    android:background="#ffffff">
 
 
     <ScrollView
